--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>  <!--verão 5 o HTML-->
 <html>
-    <!--Formatação de textos-->
+ <body>
+    
+<!--Formatação de textos-->
     <b>Texto em negrito</b>
     <br><strong>Texto importante<strong>
         <br>
