--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>  <!--verão 5 o HTML-->
-<html>
+
+<html lang="pt-pr.">
+<head>
+    <meta charset="UTF-8">
+    <title>Finlândia</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
  <body>
     
-<!--Formatação de textos-->
-    <b>Texto em negrito</b>
-    <br><strong>Texto importante<strong>
-        <br>
+<header class="cabecario">
+    <img id="finlandia" src="imagem.png" alt="bandeira da finlandia"
+    <h1> site sobre finlandia</h1>
+
+</header>
+<main class="principal"
