--- a/index.html
+++ b/index.html
@@ -11,7 +11,55 @@
     
 <header class="cabecario">
     <img id="finlandia" src="imagem.png" alt="bandeira da finlandia"
-    <h1> site sobre finlandia</h1>
+    <h1> site sobre por do sol</h1>
 
 </header>
-<main class="principal"
+<main>
+    <h2> id=titulo2" > Curiosidades sobre o por do sol</h2>
+
+    <p> O por do sol com certeza é uma das mais belas paisagens</p>
+    <p> De cor alaranjada sobre o mar</p>
+    <p> fenomeno que ocorre quando o sol se poe</p>
+</main>
+<footer>
+    <h2>Todos os direitos reservados</h2>
+    <p>Esta página foi produzida na aula de P.C.</p>
+</footer>
+ </body>
+ </html>
+ <--Formatações-->
+ <b>
+    <i>Texto em italico
+ <br>
+ <em> Texto enfatizado</em>
+ <br>
+ <mark> Texto marcado</mark>
+ <br>
+ <small> Texto pequenino</small>
+ <br>
+ <del> Texto traçado</del>
+ <br>
+ <u> Texto sublinhado</u>
+ <br>
+ log<sub>10</sub>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
