--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-pr.">
 <head>
     <meta charset="UTF-8">
-    <title>Finlândia</title>
+    <title>Por do sol</title>
     <link rel="stylesheet" href="style.css">
 </head>
  <body>
