--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
  <body>
 <header class="cabecario">
-    <img id="finlandia" src="imagem.png" alt="bandeira da finlandia"
+    <img id="finlandia" src="imagem.png" alt="sobre por do sol"
     <h1> site sobre por do sol</h1>
 </header>
 <main>
